tests/rosetta/out/Rust/apply-a-callback-to-an-array-1.error
rustc: exit status 1
error[E0277]: cannot multiply `{integer}` by `String`
 --> /tmp/apply-a-callback-to-an-array-1.rs:4:45
  |
4 |         println!("{}", vec![format!("{}", i * i.to_string())].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
  |                                             ^ no implementation for `{integer} * String`
  |
  = help: the trait `Mul<String>` is not implemented for `{integer}`
  = help: the following other types implement trait `Mul<Rhs>`:
            `&f128` implements `Mul<f128>`
            `&f128` implements `Mul`
            `&f16` implements `Mul<f16>`
            `&f16` implements `Mul`
            `&f32` implements `Mul<f32>`
            `&f32` implements `Mul`
            `&f64` implements `Mul<f64>`
            `&f64` implements `Mul`
          and 57 others

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
