tests/rosetta/out/Rust/apply-a-callback-to-an-array-1.rs
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fn main() {
    for i in vec![1, 2, 3, 4, 5] {
        println!("{}", vec![format!("{}", i * i.to_string())].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
    }
}
